@@ -1,3 +1,14 @@
+2002-02-07  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* Util.py (seconds): Remove the exit(75) upon exception, as
+	tmda-filter will now catch this.
+
+	(writefile): Ditto.
+
+	(append_to_file): Ditto.
+
+	(maketext): Ditto.
+
 2002-02-04  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* Util.py (make_msgid): Change the idstring to 'TMDA', and reverse
